--- a/experiments/exp_adult.ipynb
+++ b/experiments/exp_adult.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 10000\n",
+    "nb_vals = 100\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -93,14 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n"
+      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n",
+      "Generating arguments\n",
+      "len  1 : 13 ,  12\n",
+      "72 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 113 ,  126\n",
+      "679 potential arg checked ( 386 not minimal)\n",
+      "len  3 : 135 ,  125\n",
+      "2038 potential arg checked ( 4480 not minimal)\n",
+      "len  4 : 52 ,  18\n",
+      "4019 potential arg checked ( 17893 not minimal)\n",
+      "len  5 : 16 ,  0\n",
+      "5395 potential arg checked ( 40665 not minimal)\n",
+      "len  6 : 0 ,  0\n",
+      "4775 potential arg checked ( 59969 not minimal)\n",
+      "len  7 : 0 ,  0\n",
+      "2854 potential arg checked ( 60114 not minimal)\n",
+      "len  8 : 0 ,  0\n",
+      "1152 potential arg checked ( 41680 not minimal)\n",
+      "len  9 : 0 ,  0\n",
+      "302 potential arg checked ( 19833 not minimal)\n",
+      "len  10 : 0 ,  0\n",
+      "46 potential arg checked ( 6222 not minimal)\n",
+      "len  11 : 0 ,  0\n",
+      "3 potential arg checked ( 1165 not minimal)\n",
+      "len  12 : 0 ,  0\n",
+      "0 potential arg checked ( 99 not minimal)\n",
+      "Saving to  ../saves\\adult_100_minimals.df\n"
      ]
     }
    ],
@@ -114,7 +140,7 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
@@ -812,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
