--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 1000\n",
+    "nb_vals = 100\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -183,28 +183,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_bank_loan.ipynb Cellule 7\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39marg_explainer\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mae\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(dataset\u001b[39m.\u001b[39mfeature_names)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m explainer \u001b[39m=\u001b[39m ae\u001b[39m.\u001b[39;49mArgTabularExplainer(c, train_data\u001b[39m.\u001b[39;49miloc[\u001b[39m0\u001b[39;49m:nb_vals], y, \u001b[39m'\u001b[39;49m\u001b[39mbankloan_\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mstr\u001b[39;49m(nb_vals), compute\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, output_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../saves\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:63\u001b[0m, in \u001b[0;36mArgTabularExplainer.__init__\u001b[1;34m(self, model, dataset, y, exp_name, compute, output_path)\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovi_by_arg \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_pickle(path\u001b[39m.\u001b[39mjoin(output_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_covibyarg.df\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m     61\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovc_by_arg \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_pickle(path\u001b[39m.\u001b[39mjoin(output_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_covcbyarg.df\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m---> 63\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39marguments \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mread_args(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mminimals, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfeature_names)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:161\u001b[0m, in \u001b[0;36mArgTabularExplainer.read_args\u001b[1;34m(self, minimals, feature_names)\u001b[0m\n\u001b[0;32m    159\u001b[0m \u001b[39mfor\u001b[39;00m cl \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(minimals)):\n\u001b[0;32m    160\u001b[0m         \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m minimals[cl]:\n\u001b[1;32m--> 161\u001b[0m             arguments[cl]\u001b[39m.\u001b[39mappend(\u001b[39mtuple\u001b[39m([feature_names[k] \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m f]))\n\u001b[0;32m    162\u001b[0m \u001b[39mreturn\u001b[39;00m arguments\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:161\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    159\u001b[0m \u001b[39mfor\u001b[39;00m cl \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(minimals)):\n\u001b[0;32m    160\u001b[0m         \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m minimals[cl]:\n\u001b[1;32m--> 161\u001b[0m             arguments[cl]\u001b[39m.\u001b[39mappend(\u001b[39mtuple\u001b[39m([feature_names[k] \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m f]))\n\u001b[0;32m    162\u001b[0m \u001b[39mreturn\u001b[39;00m arguments\n",
-      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n",
+      "Generating arguments\n",
+      "len  1 : 4 ,  4\n",
+      "64 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 171 ,  152\n",
+      "1303 potential arg checked ( 149 not minimal)\n",
+      "len  3 : 1217 ,  1315\n",
+      "8605 potential arg checked ( 5715 not minimal)\n",
+      "len  4 : 885 ,  845\n",
+      "19728 potential arg checked ( 51732 not minimal)\n",
+      "len  5 : 56 ,  161\n",
+      "30669 potential arg checked ( 181838 not minimal)\n",
+      "len  6 : 2 ,  4\n",
+      "32493 potential arg checked ( 387704 not minimal)\n",
+      "len  7 : 0 ,  0\n",
+      "23181 potential arg checked ( 568928 not minimal)\n",
+      "len  8 : 0 ,  0\n",
+      "11481 potential arg checked ( 608482 not minimal)\n",
+      "len  9 : 0 ,  0\n",
+      "4046 potential arg checked ( 488616 not minimal)\n",
+      "len  10 : 0 ,  0\n",
+      "1024 potential arg checked ( 297370 not minimal)\n",
+      "len  11 : 0 ,  0\n",
+      "181 potential arg checked ( 135989 not minimal)\n",
+      "len  12 : 0 ,  0\n",
+      "20 potential arg checked ( 45443 not minimal)\n",
+      "len  13 : 0 ,  0\n",
+      "1 potential arg checked ( 10497 not minimal)\n",
+      "len  14 : 0 ,  0\n",
+      "0 potential arg checked ( 1500 not minimal)\n",
+      "len  15 : 0 ,  0\n",
+      "0 potential arg checked ( 100 not minimal)\n",
+      "Saving to  ../saves\\bankloan_100_minimals.df\n"
      ]
     }
    ],
@@ -218,7 +236,7 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
@@ -1049,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
