--- a/experiments/ijcai/exp_diabetes.ipynb
+++ b/experiments/ijcai/exp_diabetes.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "dataset_folder = '../../datasets/diabetes/'\n",
+    "dataset_folder = '../../../datasets/diabetes/'\n",
     "target_idx = 8\n",
     "balance = True\n",
     "features_to_use = [0, 1, 2, 3, 4, 5, 6, 7]\n",
@@ -114,7 +114,7 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append(sys.path[0] + '/..')\n",
+    "sys.path.append(sys.path[0] + '/../..')\n",
     "\n",
     "import arg_explainer as ae\n",
     "from importlib import reload\n",
@@ -122,7 +122,7 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'diabetes_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'diabetes_' + str(nb_vals), compute=False, output_path='../../saves')"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "G = explainer.build_attack_graph(compute=False, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "explainer.export_graph('asp', '../saves')"
+    "explainer.export_graph('asp', '../../saves')"
    ]
   },
   {
@@ -579,7 +579,7 @@
     "    train_data_plus = pd.DataFrame(dataset_t, columns=dataset.feature_names)\n",
     "    #print(train_data_plus.shape)\n",
     "    #print(y_plus)\n",
-    "    explainer = ae.ArgTabularExplainer(c, train_data_plus, y_t, 'diabetes_' + str(nb_vals) + '_extended', compute=True, output_path='../saves')\n",
+    "    explainer = ae.ArgTabularExplainer(c, train_data_plus, y_t, 'diabetes_' + str(nb_vals) + '_extended', compute=True, output_path='../../saves')\n",
     "\n",
     "    G = explainer.build_attack_graph(compute=True, display_graph=True)\n",
     "    print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
@@ -607,7 +607,7 @@
     "        print('total length', len(dataset_t), len(y_t))\n",
     "        train_data_plus = pd.DataFrame(dataset_t, columns=dataset.feature_names)\n",
     "\n",
-    "        explainer = ae.ArgTabularExplainer(c, train_data_plus, y_t, 'diabetes_' + str(nb_vals) + '_synth', compute=True, output_path='../saves')\n",
+    "        explainer = ae.ArgTabularExplainer(c, train_data_plus, y_t, 'diabetes_' + str(nb_vals) + '_synth', compute=True, output_path='../../saves')\n",
     "\n",
     "        G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "        print('total args:', len(G.nodes()))\n",
@@ -1108,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
